2007-09-24  Michael Natterer  <mitch@gimp.org>

	* app/gui/ige-mac-menu.[ch]: new versions with slight API renaming
	and new generalized API for adding application menu items.

	* app/gui/gui.c (gui_restore_after_callback): follow API changes
	and add "Preferences", "Keyboard Shortcuts" and "Units" to the
	application menu's preferences section.

2007-09-24  Simon Budig  <simon@gimp.org>

	* app/xcf/xcf-load.c: use the correct default values for the
	control points of a loaded path.

	Fixes bug #479176.

2007-09-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/drop-shadow.scm: applied patch from
	Ulf-D. Ehlert which fixes a bug which may shrink the image instead
	of enlarging it (bug #478385).

2007-09-23  Sven Neumann  <sven@gimp.org>

	* Made 2.4.0-rc3 release.

2007-09-23  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimptooloptionseditor.c
	(gimp_tool_options_editor_get_title): avoid the crash reported in
	bug #470304.

2007-09-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: marked blurbs as translatable.

2007-09-23  Simon Budig  <simon@gimp.org>

	* app/display/gimpdisplay.c: Accomodate for spill that
	happens by the box filtering.

	Fixes bug #474509. Again. Hopefully.

2007-09-23  Michael Natterer  <mitch@gimp.org>

	* menus/toolbox-menu.xml.in: added placeholder File/Preferences
	and move the preferences and keyboard shortcut dialogs there.

	* plug-ins/common/uniteditor.c (query): register the unit editor
	there too.

2007-09-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/pcx.c: avoid pointer arithmetics on void pointers.
	Fixes compilation on IRIX (bug #479357).

2007-09-23  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangleselecttool.c: Reverted commits for
	bug #479426, it's NOTABUG.

2007-09-23  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangleselecttool.c
	(gimp_rect_select_tool_should_draw): New name for
	gimp_rect_select_selection_visible() which has been changed to