@@ -1,5 +1,13 @@
 2007-09-24  Michael Natterer  <mitch@gimp.org>
 
+	* app/gui/ige-mac-menu.c (ige_mac_menu_add_app_menu_item): allow
+	to pass NULL as label and get the label from the menu itew.
+
+	* app/gui/gui.c (gui_restore_after_callback): pass NULL as labels
+	for the preferences menu items.
+
+2007-09-24  Michael Natterer  <mitch@gimp.org>
+
 	* app/gui/ige-mac-menu.[ch]: new versions with slight API renaming
 	and new generalized API for adding application menu items.
 
